tests/errors/operators/integer_nan_inf.sad
# integer_nan_inf test
risk {
    # 1000...0.0 * 1000...0.0 creates float infinity inside the interpreter, converting it raises OverflowError
    x = 100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0
    Integer(x * x)
} trap ArgumentError e {
    show(e.message)
}
